--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,12 @@
       <!-- 사용하는 h2 버전이랑 맞춰주기 -->
       <version>2.1.214</version>
     </dependency>
+
+    <dependency>
+      <groupId>javax.xml.bind</groupId>
+      <artifactId>jaxb-api</artifactId>
+      <version>2.3.0</version>
+    </dependency>
   </dependencies>
 
 
